--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -13,6 +13,7 @@
     {% block menu %}
     <header class="linear-center evenly top-fixed">
         {% if user.is_authenticated %}
+        <a class="color-black font-medium" href="{% url 'posts:profile' %}">Perfil</a>
         <a class="color-black font-medium" href="{% url 'accounts:logout' %}">Sair</a>
         {% else %}
         <a class="color-black font-medium" href="{% url 'accounts:login' %}">Entrar</a>
@@ -21,16 +22,6 @@
     {% endblock %}
 
     {% block body %}
-    {% endblock %}
-
-    {% block footer %}
-    <footer class="linear-center gap-5 bottom-fixed bg-gradient-dark">
-        <a class="font-bold font-small color-white" href="#">Sobre</a>
-        <a class="font-bold font-small color-white" href="#">Central de Ajuda</a>
-        <a class="font-bold font-small color-white" href="#">Blog</a>
-        <a class="font-bold font-small color-white" href="#">Política de Privacidade</a>
-        <a class="font-bold font-small color-white" href="#">Acessibilidade</a>
-    </footer>
     {% endblock %}
 </body>
 </html>
