--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,9 @@
 :root{
     --gray: #F6F7F9;
     --white: #ffffff;
+    --clean-white: #ffffffb0;
     --black: #0d0d0d;
+    --clean-black: #0d0d0db0;
     --yellow: #E3F84A; 
 }
 
@@ -148,7 +150,7 @@ h2{
 }
 
 .font-small{
-    font-size: small;
+    font-size: 0.9rem;
 }
 
 .font-medium{
@@ -173,6 +175,21 @@ h2{
     width: 1.5vw;
 }
 
+.link{
+    transition: all 0.5s;
+    cursor: pointer;
+    color: var(--clean-black);
+    font-weight: 500;
+}
+    
+.link:hover{
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    color: var(--black);
+    font-weight: 600;
+}    
+
+
 @media (max-width: 800px){
     .font-small{
         font-size: 0.4rem;
@@ -196,7 +213,13 @@ h2{
 .line{
     margin: 0vh;
     width: 9vw;
-    border-top: 0.1px solid var(--black);
+    border-top: 0.1px solid rgba(13, 13, 13, 0.5);
+}
+
+.line1{
+    margin: 0vh;
+    width: 42vw;
+    border-top: 1px solid var(--clean-black);
 }
 
 @media (max-width: 800px){
@@ -236,8 +259,20 @@ h2{
     color: var(--white);
 }
 
+.color-gray{
+    color: var(--gray);
+}
+
 .color-black{
     color: var(--black);
+}
+
+.color-clean-black{
+    color: var(--clean-black);
+}
+
+.color-clean-white{
+    color: var(--clean-white);
 }
 
 /* ------ Button ------ */
