--- a/templates/base.html
+++ b/templates/base.html
@@ -25,15 +25,12 @@
 
     {% block footer %}
     <footer class="column-center gap-1 bottom-fixed bg-white">
-        <div>
-            <hr class="line1">
-        </div>
         <div class="linear-center gap-5">
-            <a class="link font-small" href="#">Sobre</a>
-            <a class="link font-small" href="#">Central de Ajuda</a>
-            <a class="link font-small" href="#">Blog</a>
-            <a class="link font-small" href="#">Política de Privacidade</a>
-            <a class="link font-small" href="#">Acessibilidade</a>
+            <a class="link-black font-small" href="/#">Sobre</a>
+            <a class="link-black font-small" href="/#">Central de Ajuda</a>
+            <a class="link-black font-small" href="/#">Blog</a>
+            <a class="link-black font-small" href="/#">Política de Privacidade</a>
+            <a class="link-black font-small" href="/#">Acessibilidade</a>
         </div>
     </footer>
     {% endblock %}
