--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,6 @@ p, h2{
 
 a{
     font-weight: 500;
-    color: var(--yellow);
     text-decoration: none;
 }
 
@@ -89,10 +88,12 @@ h2{
 .page{
     height: 90vh;
     width: 100vw;
+    border-radius: 0px 0px 40px 40px;
 }
 
-.container{
-    border-radius: 20px;
+.full{
+    height: 100vh;
+    width: 100vw;
 }
 
 .top-fixed, .bottom-fixed{
@@ -102,7 +103,15 @@ h2{
 }
 
 .left-fixed{
-    height: 90vh;
+    height: 100vh;
+    width: 10vw;
+    position: fixed;
+}
+
+.body-left-fixed{
+    height: 100vh;
+    width: 90vw;
+    right: 0vw;
     position: fixed;
 }
 
@@ -118,6 +127,10 @@ h2{
     position: relative;
     right: 35px;
     cursor: pointer;
+}
+
+.margin{
+    margin: 2px;
 }
 
 @media (max-width: 800px){
@@ -175,21 +188,29 @@ h2{
     width: 1.5vw;
 }
 
-.link{
+.link-black, .link-white{
     transition: all 0.5s;
     cursor: pointer;
-    color: var(--clean-black);
     font-weight: 500;
 }
-    
-.link:hover{
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-    color: var(--black);
+
+.link-black{
+    color: var(--clean-black);
+}
+
+.link-white{
+    color: var(--clean-white);
+}
+
+.link-white:hover{
+    color: var(--white);
     font-weight: 600;
 }    
 
-
+.link-black:hover{
+    color: var(--black);
+    font-weight: 600;
+}    
 @media (max-width: 800px){
     .font-small{
         font-size: 0.4rem;
@@ -216,15 +237,18 @@ h2{
     border-top: 0.1px solid rgba(13, 13, 13, 0.5);
 }
 
-.line1{
+.line-medium{
     margin: 0vh;
-    width: 42vw;
+    width: 40vw;
     border-top: 1px solid var(--clean-black);
 }
 
 @media (max-width: 800px){
     .line{
         width: 35vw;
+    }
+    .line-medium{
+        width: 50vw;
     }
 }
 /* ------ Colors ------ */
@@ -247,12 +271,12 @@ h2{
 
 .bg-gradient-dark{
     background: rgb(41,1,65);
-    background: linear-gradient(90deg, rgba(41,1,65,1) 0%, rgba(14,0,26,1) 100%);
+    background: linear-gradient(90deg, rgba(31,2,48,1) 0%, rgba(0, 0, 0, 1) 100%);
 }
 
 .bg-gradient-dark-0{
     background: rgb(41,1,65);
-    background: linear-gradient(0deg, rgba(41,1,65,1) 0%, rgba(14,0,26,1) 100%);
+    background: linear-gradient(0deg, rgba(41,1,65,1) 0%, rgba(13, 13, 13,1) 100%);
 }
 
 .color-white{
@@ -278,10 +302,12 @@ h2{
 /* ------ Button ------ */
 .btn-medium, .btn-small, .btn-big{
     font-family: 'Roboto Mono', monospace;
-    font-weight: 500;
     cursor: pointer;
     padding: 2vh 0vw;
     border-radius: 25px;
+    background: linear-gradient(90deg, rgba(31,2,48,1) 0%, rgba(0, 0, 0, 1) 100%);
+    color: var(--white);
+    border: 2px solid var(--black);
 }
 
 .btn-small{
@@ -294,6 +320,12 @@ h2{
 
 .btn-big{
     width: 30vw;
+}
+
+.btn-medium:hover, .btn-small:hover, .btn-big:hover{
+    color: var(--clean-black);
+    font-weight: 600;
+    background: var(--white);
 }
 
 .input{
@@ -323,11 +355,15 @@ h2{
 
 /* ----- Spaces ----- */
 .gap-1{
-    gap: 0.8vw;
+    gap: 1vw;
 }
 
 .gap-2{
     gap: 2vw;
+}
+
+.gap-2-h{
+    gap: 2vh;
 }
 
 .gap-5{
@@ -336,6 +372,10 @@ h2{
 
 .gap-none{
     gap: none;
+}
+
+.padding-top-1{
+    padding-top: 1vh;
 }
 
 .padding-top-2{
@@ -357,6 +397,9 @@ h2{
 @media (max-width: 800px){
     .gap-5{
         gap: 3vw;
+    }
+    .gap-1{
+        gap: 1.8vw;
     }
     .padding-top-2{
         padding-top: 1vw;
