--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,8 +8,8 @@
 {% endblock %}
 
 {% block body %}
-<section class="bg-white page">
-    <div class="container">
+<section class="bg-white">
+    <div class="page bg-white"> ajashksjdhkjashfjkakj
         <span class="linear-center gap-none">
             <h2 class="color-black" name="login" id="text"></h2>
             <h2 class="color-black animation-type" id="bar" >_</h2>
@@ -36,26 +36,22 @@
 
         <form class="column-center gap-2" action="" method="post">
             {% csrf_token %}
-            <input name="field-username" class="input bg-gray color-black" placeholder="Usuário ou E-mail" type="text">
-            <input name="field-password" class="input bg-gray color-black" placeholder="Senha" type="password">
-            <button type="submit" class="btn-medium bg-gradient color-white">Entrar</button> 
+            <div class="column-center gap-1">   
+                <input name="field-username" class="input bg-gray color-black" placeholder="Usuário ou E-mail" type="text">
+                <input name="field-password" class="input bg-gray color-black" placeholder="Senha" type="password">
+            </div>
+            <button type="submit" class="btn-medium color-clean-white">Entrar</button> 
         </form>
 
-        <div class="column-center padding-top-2 evenly">
+        <div class="column-center gap-1 padding-top-1 evenly">
             <div class="linear-center gap-1">
                 <hr class="line color-clean-black">
                 <p>ou</p>    
                 <hr class="line color-clean-black">
             </div>
-            <div class="btn-medium linear-center bg-gradient">
-                <a title="Redefinir Senha" class="font-small color-white" href="#">Redefinir senha</a>
-            </div>
-        </div>
-        <div class="linear-center gap-2 padding-top-5">
-            <a title="Google" class="link font-medium linear-center color-black gap-1" href="#">
-                <img class="img-small" src="{% static 'img/logo_g.png' %}" alt="Google">Logue com Google
-            </a>
-            <a class="link font-medium color-black" href="{% url 'account:signup' %}">Inscreva-se</a>
+            <a title="Redefinir Senha" class="btn-medium linear-center font-small" href="#">Redefinir senha</a>
+            <a class="btn-medium linear-center font-small" href="{% url 'account:signup' %}">Inscreva-se</a>
+            
         </div>
     </div>
 </section>
