--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -49,7 +49,7 @@
                 <p>ou</p>    
                 <hr class="line color-clean-black">
             </div>
-            <a title="Redefinir Senha" class="btn-medium linear-center font-small" href="#">Redefinir senha</a>
+            <a title="Redefinir Senha" class="btn-medium linear-center font-small" href="/#">Redefinir senha</a>
             <a class="btn-medium linear-center font-small" href="{% url 'account:signup' %}">Inscreva-se</a>
             
         </div>
