--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,6 +194,10 @@ header{
     width: 2vw;
 }
 
+.img-big{
+    width: 5vw;
+}
+
 .link-black, .link-white{
     transition: all 0.5s;
     cursor: pointer;
