--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -10,18 +10,33 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    {% block menu %}
-    <header class="linear-center evenly top-fixed">
-        {% if user.is_authenticated %}
-        <a class="color-black font-medium" href="{% url 'posts:profile' %}">Perfil</a>
-        <a class="color-black font-medium" href="{% url 'accounts:logout' %}">Sair</a>
-        {% else %}
-        <a class="color-black font-medium" href="{% url 'accounts:login' %}">Entrar</a>
-        {% endif %}
-    </header>
-    {% endblock %}
 
+<section class="full">
+    {% block menu %}
+    <section class="bg-gradient-dark-0 column-between evenly left-fixed color-clean-white">
+        <div>
+            <a href="{% url 'posts:profile' %}">
+                <img src="{% static 'img/default-profile-photo-white.png' %}" class="img-small">
+            </a>
+        </div>
+        <div class="column-between gap-2">
+            <canvas class="circle-small bg-gray"></canvas>
+            <canvas class="circle-small bg-gray"></canvas>
+            <canvas class="circle-small bg-gray"></canvas>
+            <canvas class="circle-small bg-gray"></canvas>
+        </div>
+        <div>
+            <a href="{% url 'accounts:logout' %}">
+                <img src="{% static 'img/off-white.png' %}" class="img-small">
+            </a>
+        </div>
+    </section>
+    {% endblock %}
+    <section class="bg-white color-black body-left-fixed">
+    
     {% block body %}
     {% endblock %}
+    </section>
+</section>
 </body>
 </html>
